--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,47 @@
+@article{ZhZhXiLiGu09,
+  title     = {Standard random walks and trapping on the {K}och network with scale-free behavior and small-world effect},
+  author    = {Zhang, Zhongzhi and Zhou, Shuigeng and Xie, Wenlei and Chen, Lichao and Lin, Yuan and Guan, Jihong},
+  journal   = {Phys. Rev. E},
+  volume    = {79},
+  number    = {6},
+  pages     = {061113},
+  year      = {2009},
+  publisher = {APS}
+}% journal={Physical Review E},
+
+@article{ZhWuLiCo16,
+  title     = {{The number and degree distribution of spanning trees in the Tower of Hanoi graph}},
+  author    = {Zhang, Zhongzhi and Wu, Shunqi and Li, Mingyun and Comellas, Francesc},
+  journal   = {Theoret. Comput. Sci.},
+  volume    = {609},
+  pages     = {443--455},
+  year      = {2016},
+  publisher = {Elsevier}
+}%journal={Theoretical Computer Science},
+
+
+
+@article{ShLiZh17,
+  title     = {Domination number and minimum dominating sets in pseudofractal scale-free web and Sierpi{\'n}ski graph},
+  author    = {Shan, Liren and Li, Huan and Zhang, Zhongzhi},
+  journal   = {Theoret. Comput. Sci.},
+  volume    = {677},
+  pages     = {12--30},
+  year      = {2017},
+  publisher = {Elsevier}
+}%  journal={Theoretical Computer Science},
+
+@article{QiDoZhZh20,
+  title     = {Hitting times for random walks on {S}ierpi{\'n}ski graphs and Hierarchical graphs},
+  author    = {Qi, Yi and Dong, Yuze and Zhang, Zhongzhi and Zhang, Zhang},
+  journal   = {Comput. J.},
+  volume    = {63},
+  number    = {9},
+  pages     = {1385--1396},
+  year      = {2020},
+  publisher = {Oxford University Press}
+}%  journal={The Computer Journal},
+
 @inproceedings{ZhZh21,
   title     = {Maximizing influence of leaders in social networks},
   author    = {Zhou, Xiaotian and Zhang, Zhongzhi},
