--- a/main.tex
+++ b/main.tex
@@ -15,14 +15,19 @@
     Zuobai~Zhang,
     Zhuoqing~Song,
     Zhongzhi~Zhang~\IEEEmembership{Member,~IEEE}
-    \thanks{
-        Haisong Xia, Wanyue Xu and Zhongzhi Zhang are with the Shanghai Key Laboratory of Intelligent Information Processing, School of Computer Science, Fudan University, Shanghai 200433, China;
-        Zhongzhi Zhang is also with the Shanghai Engineering Research Institute of Blockchain, Shanghai 200433, China.
+    \thanks{This work was  supported  by the National Natural Science Foundation of China (No. U20B2051) and the Shanghai Municipal Science and Technology
+        Major Project  (No. 2021SHZDZX03). Any correspondence should be addressed to Zhongzhi Zhang.
     }
 
+
     \thanks{
-        An earlier version of this paper was presented in part at WSDM '20: The Thirteenth ACM International Conference on Web Search and Data Mining~\cite{ZhXuZh20}[DOI: 10.1145/3336191.3371777]. (Corresponding author: Zhongzhi Zhang.)
+        Haisong Xia, Wanyue Xu and Zhongzhi Zhang are with the Shanghai Key Laboratory of Intelligent Information Processing, School of Computer Science, Fudan University, Shanghai 200433, China;
+        Zhongzhi Zhang is also with the Shanghai Engineering Research Institute of Blockchain, Shanghai 200433, China. {\tt\small zhangzz@fudan.edu.cn}
     }
+    \thanks{
+        An earlier version of this paper was presented in part at the Thirteenth ACM International Conference on Web Search and Data Mining (WSDM)~\cite{ZhXuZh20} [DOI: 10.1145/3336191.3371777].
+    }
+
 }
 
 \markboth{IEEE Transactions on Information Theory}
@@ -59,9 +64,9 @@
 Frequently cited examples include image segmentation~\cite{Le06}, random algorithm design~\cite{SaDi12}, collaborative recommendation~\cite{FoPiReSa07}, community detection~\cite{LaDeBa14}, among others.
 A fundamental quantity related to random walks is hitting time~\cite{Lo93}, also called first-passage time~\cite{CoBeTeVoKl07}.
 For a random walk on a graph, the hitting time \(H_{ij}\) from a vertex \(i\) to another vertex \(j\) is the expected time for the walker starting from \(i\) to visit \(j\) for the first time.
-Hitting time is related to many problems and has been successfully applied to diverse areas, such as Hanoi problem with random move~\cite{WuZhCh11}, query suggestion~\cite{MeZhCh08}, and clustering algorithm~\cite{ChLiTa08}.
+Hitting time is related to many problems and has been successfully applied to diverse areas, such as Hanoi problem with random move~\cite{WuZhCh11,QiDoZhZh20}, query suggestion~\cite{MeZhCh08}, and clustering algorithm~\cite{ChLiTa08}.
 
-Except for the intrinsic interest of hitting time itself and its direct applications, many other relevant quantities related to random walks are encoded in or expressed in terms of this crucial quantity, for example, absorbing random-walk centrality~\cite{MaMaGi15} (or Markov centrality~\cite{WhSm03}), Kemeny constant~\cite{Hu14} and random detour time~\cite{RaZh13}.
+Except for the intrinsic interest of hitting time itself and its direct applications, many other relevant quantities related to random walks are encoded in or expressed in terms of this crucial quantity, for example, absorbing random-walk centrality~\cite{MaMaGi15} (or Markov centrality~\cite{WhSm03}), Kemeny constant~\cite{Hu14} and random detour time~\cite{BoRaZh11,RaZh13}.
 As the name implies, the absorbing random-walk centrality is a measure for the importance of vertices on a graph.
 For a vertex \(j\), its absorbing random-walk centrality \(H_j\) is defined by \(H_j=\sum_{i} \rho(i) H_{ij}\), where \(\rho(\cdot)\) is the starting probability distribution over all vertices.
 Different from the shortest-path based centrality measures, random-walk based centrality metrics include the contributions from essentially all paths~\cite{Ne05}, and thus have a better discriminating power.
@@ -72,19 +77,18 @@ It can be utilized to gauge the efficiency of user navigation through the World 
 Moreover, the Kemeny constant is related to the mixing rate of an irreducible Markov chain~\cite{LePeWi09}, by regarding it as the expected time to mixing of the Markov chain~\cite{Hu06}.
 Recently, the Kemeny constant has been applied to measure the efficiency of robotic surveillance in network environments~\cite{PaAgBu15} and to characterize the noise robustness of a class of protocols for formation control~\cite{JaOl19}.
 
-Despite the wide range of applications of the absorbing random-walk centrality and the Kemeny constant, it is a computational challenge to obtain their exact values.
+\textbf{Motivations}. Despite the wide range of applications of the absorbing random-walk centrality and the Kemeny constant, it is a computational challenge to obtain their exact values.
 By definition, both the absorbing random-walk centrality and the Kemeny constant are a partial average of some hitting times.
 However, the exact value of hitting time between any pair of vertices in a graph involves all eigenvalues and eigenvectors of (normalized) Laplacian matrix associated with the graph~\cite{Lo93,LiZh13PRE}, the computation complexity of which is the cube of the vertex number.
-Thus, for large realistic networks with millions of vertices, we cannot obtain their absorbing random-walk centrality and the Kemeny constant by resorting this straightforward method for computing hitting time.
-It is then of theoretical and practical interest to seek for alternative approximate approaches that scale to large networks.
+Thus, for large realistic networks with millions of vertices, we cannot obtain their absorbing random-walk centrality and the Kemeny constant by resorting this straightforward method for computing hitting time. It is then of theoretical and practical interest to seek for alternative approximate approaches that scale to large networks.
 
-While computing absorbing random-walk centrality for a single vertex can be difficult, it is even more complex to find a group of \(k\) important vertices, which arises in many studies.
-For instance, in the field of wireless networks, sensor placement involves selecting an optimal subset of vertices to place sensors to sample physical signals~\cite{KrSiGu08,RaChVe14}, such as radiation or temperature.
-Another example is point cloud sampling~\cite{DiChWaBa20,ChTiFeVeKo17}, which requires selecting a representative subset of points to preserve the geometric features of reconstruction.
-Traditional methods of ranking individual vertices may not meet these requirements, making it necessary to propose a vertex group centrality.
+%While computing absorbing random-walk centrality for a single vertex can be difficult, it is even more complex to find a group of \(k\) important vertices, which arises in many studies. For instance, in the field of wireless networks, sensor placement involves selecting an optimal subset of vertices to place sensors to sample physical signals~\cite{KrSiGu08,RaChVe14}, such as radiation or temperature. Another example is point cloud sampling~\cite{DiChWaBa20,ChTiFeVeKo17}, which requires selecting a representative subset of points to preserve the geometric features of reconstruction. Traditional methods of ranking individual vertices may not meet these requirements, making it necessary to propose a vertex group centrality.
+
+Moreover, in various practical applications, many problems cannot be reduced to determining the importance of individual nodes, but are essentially to find a group of $k$ nodes that is the most important among all node groups, each containing exactly $k$ nodes. For example, how to place resources on a fixed number of $k$ peers in P2P networks, so that they are easily accessed by others~\cite{GkMiSa06}.  Again for instance, in the field of wireless networks, sensor placement involves selecting an optimal subset of vertices to place sensors to sample physical signals~\cite{KrSiGu08,RaChVe14}, such as radiation or temperature. Finally, in the context of point cloud sampling~\cite{DiChWaBa20,ChTiFeVeKo17}, it requires selecting a representative subset of points to preserve the geometric features of reconstruction. Recently, the absorbing random-walk centrality for an individual vertex~\cite{WhSm03} has been extended to a group of vertices~\cite{MaMaGi15}. Moreover, the problem of choosing \(k\) most important vertices was proposed, and an approximated algorithm was developed to solve the problem in cubic running time, which is not applicable to large networks. Thus, it is of great significance to propose a hitting time based centrality for vertex group and design fast algorithm to find the most important  $k$ vertices.
+
 
 We introduce a new vertex group centrality called Group Walk Centrality (GWC) by extending absorbing random-walk centrality to the case of multiple vertices.
-For a connected undirected graph and a vertex group \(S\), GWC \(\manc{S}\) is the expected hitting time for a random walker starting from a vertex \(u\) to an arbitary vertex in \(S\). Here, vertex \(u\) is chosen based on the stationary distribution \(\vecpi\).
+For a connected undirected graph and a vertex group \(S\), GWC \(\manc{S}\) is the expected hitting time for a random walker starting from a vertex \(u\) to an arbitrary vertex in \(S\). Here, vertex \(u\) is chosen based on the stationary distribution \(\vecpi\).
 We also introduce the GWC minimization problem, which involves identifying the vertex group \(S^*\) with capacity \(k\) that minimizes GWC \(\manc{S^*}\).
 
 For the absorbing random-walk centrality \(H_j=\sum_{i} \rho(i) H_{ij}\), we focus on the special case when the starting probability distribution \(\rho(\cdot)\) is the stationary distribution \(\vecpi=(\pi_1, \pi_2, \cdots, \pi_n)^{\top}\) of the random walk.
@@ -1454,7 +1458,7 @@ The extended  Tower of Hanoi graph denoted by \(\overline{\mathcal{H}}_{g}(g\ge 
     \label{Kg04}
 \end{align}
 
-\textit{Numerical Results.} We use our algorithm \textsc{ApproxHK} to compute the Kemeny constant on   pseudofractal scale-free web \(\mathcal{F}_{12}\),  Koch network \(\mathcal{M}_{10}\),   Cayley tree \(\mathcal{C}_{3,19}\), and   extended  Tower of Hanoi graph \(\overline{\mathcal{H}}_{13}\). The numerical results are reported in  Table~\ref{tab:Kemeny}, which shows that the approximation algorithm \textsc{ApproxHK} works effectively for the four networks. This again demonstrates the advantage of our proposed algorithm  \textsc{ApproxHK} for large networks.
+\textbf{Numerical Results.} We use our algorithm \textsc{ApproxHK} to compute the Kemeny constant on   pseudofractal scale-free web \(\mathcal{F}_{12}\),  Koch network \(\mathcal{M}_{10}\),   Cayley tree \(\mathcal{C}_{3,19}\), and   extended  Tower of Hanoi graph \(\overline{\mathcal{H}}_{13}\). The numerical results are reported in  Table~\ref{tab:Kemeny}, which shows that the approximation algorithm \textsc{ApproxHK} works effectively for the four networks. This again demonstrates the advantage of our proposed algorithm  \textsc{ApproxHK} for large networks.
 
 \begin{table*}[htbp]
     %\tabcolsep=5pt
@@ -1486,382 +1490,48 @@ The extended  Tower of Hanoi graph denoted by \(\overline{\mathcal{H}}_{g}(g\ge 
 
 \subsection{Performance for Algorithms \textsc{DeterMinGWC} and \textsc{ApproxMinGWC}}
 
-We first compare the performance of \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} with the optimum solution on four toy networks~\cite{Ku13}: \(\mathit{Zebra}\) with 23 vertices, \(\mathit{Zachary\ karate\ club}\) with 34 vertices, \(\mathit{Contiguous\ USA}\) with 49 vertices and \(\mathit{Les\ Miserables}\) with 77 vertices.
 
-To find the set of \(k\) elements with the lowest GWC value for each network \(\gr=(V,E)\), the optimum solution iterates through all the \(k\)-element subsets of \(V\), where \(k\) ranges from \(1\) to \(5\).
-We then compare the smallest GWC value with the solution provided by \textsc{DeterMinGWC} and \textsc{ApproxMinGWC}, whose results are shown in \figref{pic:compare-effect-optimum}.
-During the execution of \textsc{ApproxMinGWC}, we set the error parameter \(\epsilon\) to \(0.2\).
-The results in \figref{pic:compare-effect-optimum} demonstrate that the solutions provided by our algorithms are almost identical to each other, and both are very close to the optimum solution.
-This indicates that our proposed algorithms have a much better approximation ratio than the theoretical guarantees.
+\textbf{Accuracy of Algorithms \textsc{DeterMinGWC} and \textsc{ApproxMinGWC}.} We first demonstrate the accuracy of our algorithms \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} by comparing their results of with the optimum and random solutions on four small-scale networks~\cite{Ku13}: \(\mathit{Zebra}\) with 23 vertices and *** edges, \(\mathit{Zachary\ karate\ club}\) with 34 vertices and *** edges, \(\mathit{Contiguous\ USA}\) with 49 vertices and *** edges, and \(\mathit{Les\ Miserables}\) with 77 vertices and *** edges. For each network, a random solution is obtained by choosing $k$ vertices uniformly at random. Moreover, since these small networks, we are able to compute the optimum solutions by brute-force search. For each $k=1,2,\ldots,5$, we find $k$ vertices  by optimal and stochastic schemes, and \textsc{DeterMinGWC} and \textsc{ApproxMinGWC}, with the error parameter $\epsilon$ in \textsc{ApproxMinGWC} being  \(0.2\). We report the GWC results on these four strategies in~\figref{pic:compare-effect-optimum}. As shown in~\figref{pic:compare-effect-optimum},  the solutions provided by our algorithms \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} are almost identical, with both being very close to the optimum solutions. This indicates that the practical approximation ratios of our algorithms are much better than their theoretical guarantees. In addition,  \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} are far better than the random strategy.
+
+
 
 \begin{figure}[!t]
     \centering
-    \begin{tikzpicture}[scale=\scaleoptimum,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                legend style={font=\Large,legend columns=2},
-                legend entries={\textsc{Approx},\textsc{Deter},\textsc{Optimum},\textsc{Random}},
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/optimum/Zebra/Approx.dat};
-            \addplot table {compare_effects/optimum/Zebra/Exact.dat};
-            \addplot table {compare_effects/optimum/Zebra/Optimum.dat};
-            \addplot table {compare_effects/optimum/Zebra/Random.dat};
-            \node [font=\huge] at (1.5,2.5) {(a)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
-    \begin{tikzpicture}[scale=\scaleoptimum,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                legend style={font=\Large,legend columns=2},
-                legend entries={\textsc{Approx},\textsc{Deter},\textsc{Optimum},\textsc{Random}},
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/optimum/Zachary karate club/Approx.dat};
-            \addplot table {compare_effects/optimum/Zachary karate club/Exact.dat};
-            \addplot table {compare_effects/optimum/Zachary karate club/Optimum.dat};
-            \addplot table {compare_effects/optimum/Zachary karate club/Random.dat};
-            \node [font=\huge] at (1.5,1.5) {(b)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
-
-    \begin{tikzpicture}[scale=\scaleoptimum,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                legend style={font=\Large,legend columns=2},
-                legend entries={\textsc{Approx},\textsc{Deter},\textsc{Optimum},\textsc{Random}},
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/optimum/Contiguous USA/Approx.dat};
-            \addplot table {compare_effects/optimum/Contiguous USA/Exact.dat};
-            \addplot table {compare_effects/optimum/Contiguous USA/Optimum.dat};
-            \addplot table {compare_effects/optimum/Contiguous USA/Random.dat};
-            \node [font=\huge] at (1.5,6.5) {(c)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
-    \begin{tikzpicture}[scale=\scaleoptimum,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                legend style={font=\Large,legend columns=2},
-                legend entries={\textsc{Approx},\textsc{Deter},\textsc{Optimum},\textsc{Random}},
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/optimum/Les Miserables/Approx.dat};
-            \addplot table {compare_effects/optimum/Les Miserables/Exact.dat};
-            \addplot table {compare_effects/optimum/Les Miserables/Optimum.dat};
-            \addplot table {compare_effects/optimum/Les Miserables/Random.dat};
-            \node [font=\huge] at (1.5,3) {(d)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
+    \includegraphics[width=\linewidth]{compare_effects_optimum.pdf}
     \caption{GWC \(\manc{S}\) of vertex group \(S\) computed by four different algorithms(\textsc{DeterMinGWC},\textsc{ApproxMinGWC}, \textsc{Random} and \textsc{Optimum}) on four networks: Zebra (a), Zachary karate club (b), Contiguous USA (c) and Les Miserables (d), where \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} are denoted as \textsc{Deter} and \textsc{Approx} in the legend to save space.\label{pic:compare-effect-optimum}}
 \end{figure}
 
-We then compare the performance of \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} with three other algorithms: \text{Top-Absorb}, \text{Top-Degree}, and \text{Top-PageRank}.
-\text{Top-Absorb} simply selects \(k\) absorbing vertices with the lowest absorbing random-walk centrality, while \text{Top-Degree} and \text{Top-PageRank} select the vertices with the largest degrees and PageRank values, respectively.
-We execute these four algorithms on eight medium-sized networks.
-During the execution of \textsc{ApproxMinGWC}, we set the error parameter \(\epsilon\) to \(0.2\).
-The results are shown in \figref{pic:compare-effect1} and \figref{pic:compare-effect2}.
-As displayed in \figref{pic:compare-effect1} and \figref{pic:compare-effect2}, both of our algorithms produce similar approximate solutions in larger networks, which outperform the solutions of other algorithms.
+We continue to demonstrate the effective of our algorithms \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} by comparing their performance  with three baseline algorithms: \text{Top-Absorb}, \text{Top-Degree}, and \text{Top-PageRank}. \text{Top-Absorb} simply selects \(k\) vertices with the lowest value of walk centrality, \text{Top-Degree} selects \(k\) vertices with the largest degrees, while \text{Top-PageRank} selects \(k\) vertices with the largest  PageRank values. We execute these five strategies of vertex selection on eight medium-sized networks, with the parameter $\epsilon$ in \textsc{ApproxMinGWC} being  \(0.2\). The results for these schemes are shown in \figref{pic:compare-effect1} and \figref{pic:compare-effect2}. As displayed in these two figures, both of our algorithms produce similar approximate solutions, outperforming the other three baseline strategies.
 
 \begin{figure}[!t]
     \centering
-    \begin{tikzpicture}[scale=\scaleexact,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                minor x tick num=1,
-                minor y tick num=4,
-                legend style={
-                        font=\footnotesize,
-                        legend columns=3,
-                    },
-                legend entries={\textsc{Approx},\textsc{Deter},Top-Absorb,Top-Degree,Top-PageRank},
-                % ymax=800,
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/exact/CA-GrQc/Approx.dat};
-            \addplot table {compare_effects/exact/CA-GrQc/Exact.dat};
-            \addplot table {compare_effects/exact/CA-GrQc/Top-Absorb.dat};
-            \addplot table {compare_effects/exact/CA-GrQc/Top-Degree.dat};
-            \addplot table {compare_effects/exact/CA-GrQc/Top-PageRank.dat};
-            \node [font=\huge] at (10,30) {(a)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
-    \begin{tikzpicture}[scale=\scaleexact,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                minor x tick num=1,
-                minor y tick num=4,
-                legend style={
-                        font=\footnotesize,
-                        legend columns=3,
-                    },
-                legend entries={\textsc{Approx},\textsc{Deter},Top-Absorb,Top-Degree,Top-PageRank},
-                % ymax=4500,
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/exact/ego-Facebook/Approx.dat};
-            \addplot table {compare_effects/exact/ego-Facebook/Exact.dat};
-            \addplot table {compare_effects/exact/ego-Facebook/Top-Absorb.dat};
-            \addplot table {compare_effects/exact/ego-Facebook/Top-Degree.dat};
-            \addplot table {compare_effects/exact/ego-Facebook/Top-PageRank.dat};
-            \node [font=\huge] at (10,20) {(b)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
-
-    \begin{tikzpicture}[scale=\scaleexact,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                ytick distance=10^1,
-                minor x tick num=1,
-                minor y tick num=4,
-                legend style={
-                        font=\footnotesize,
-                        legend columns=3,
-                    },
-                legend entries={\textsc{Approx},\textsc{Deter},Top-Absorb,Top-Degree,Top-PageRank},
-                % ymax=1600,
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/exact/Euroroads/Approx.dat};
-            \addplot table {compare_effects/exact/Euroroads/Exact.dat};
-            \addplot table {compare_effects/exact/Euroroads/Top-Absorb.dat};
-            \addplot table {compare_effects/exact/Euroroads/Top-Degree.dat};
-            \addplot table {compare_effects/exact/Euroroads/Top-PageRank.dat};
-            \node [font=\huge] at (10,25) {(c)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
-    \begin{tikzpicture}[scale=\scaleexact,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                minor x tick num=1,
-                minor y tick num=4,
-                legend style={
-                        font=\footnotesize,
-                        legend columns=3,
-                    },
-                legend entries={\textsc{Approx},\textsc{Deter},Top-Absorb,Top-Degree,Top-PageRank},
-                % ymax=12000,
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/exact/US power grid/Approx.dat};
-            \addplot table {compare_effects/exact/US power grid/Exact.dat};
-            \addplot table {compare_effects/exact/US power grid/Top-Absorb.dat};
-            \addplot table {compare_effects/exact/US power grid/Top-Degree.dat};
-            \addplot table {compare_effects/exact/US power grid/Top-PageRank.dat};
-            \node [font=\huge] at (10,90) {(d)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
+    \includegraphics[width=\linewidth]{compare_effects_exact1.pdf}
     \caption{GWC \(\manc{S}\) of vertex group \(S\) computed by four different algorithms(\textsc{DeterMinGWC},\textsc{ApproxMinGWC},\text{Top-Absorb} and \text{Top-Degree}) on four networks: CA-GrQc (a), ego-Facebook (b), Euroroads (c) and US power grid (d), where \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} are denoted as \textsc{Deter} and \textsc{Approx} in the legend to save space.\label{pic:compare-effect1}}
 \end{figure}
 
 \begin{figure}[!t]
     \centering
-    \begin{tikzpicture}[scale=\scaleexact,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                minor x tick num=1,
-                minor y tick num=4,
-                legend style={
-                        font=\footnotesize,
-                        legend columns=3,
-                    },
-                legend entries={\textsc{Approx},\textsc{Deter},Top-Absorb,Top-Degree,Top-PageRank},
-                % ymax=800,
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/exact/Hamsterster friends/Approx.dat};
-            \addplot table {compare_effects/exact/Hamsterster friends/Exact.dat};
-            \addplot table {compare_effects/exact/Hamsterster friends/Top-Absorb.dat};
-            \addplot table {compare_effects/exact/Hamsterster friends/Top-Degree.dat};
-            \addplot table {compare_effects/exact/Hamsterster friends/Top-PageRank.dat};
-            \node [font=\huge] at (15,7) {(a)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
-    \begin{tikzpicture}[scale=\scaleexact,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                minor x tick num=1,
-                minor y tick num=4,
-                legend style={
-                        font=\footnotesize,
-                        legend columns=3,
-                    },
-                legend entries={\textsc{Approx},\textsc{Deter},Top-Absorb,Top-Degree,Top-PageRank},
-                % ymax=4500,
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/exact/Hamsterster full/Approx.dat};
-            \addplot table {compare_effects/exact/Hamsterster full/Exact.dat};
-            \addplot table {compare_effects/exact/Hamsterster full/Top-Absorb.dat};
-            \addplot table {compare_effects/exact/Hamsterster full/Top-Degree.dat};
-            \addplot table {compare_effects/exact/Hamsterster full/Top-PageRank.dat};
-            \node [font=\huge] at (15,10) {(b)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
-
-    \begin{tikzpicture}[scale=\scaleexact,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                ytick distance=10^1,
-                minor x tick num=1,
-                minor y tick num=4,
-                legend style={
-                        font=\footnotesize,
-                        legend columns=3,
-                    },
-                legend entries={\textsc{Approx},\textsc{Deter},Top-Absorb,Top-Degree,Top-PageRank},
-                % ymax=1600,
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/exact/Reactome/Approx.dat};
-            \addplot table {compare_effects/exact/Reactome/Exact.dat};
-            \addplot table {compare_effects/exact/Reactome/Top-Absorb.dat};
-            \addplot table {compare_effects/exact/Reactome/Top-Degree.dat};
-            \addplot table {compare_effects/exact/Reactome/Top-PageRank.dat};
-            \node [font=\huge] at (15,25) {(c)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
-    \begin{tikzpicture}[scale=\scaleexact,baseline]
-        \pgfplotsset{
-            every axis legend/.append style={
-                    at={(0.5,1.03)},
-                    anchor=south
-                },
-        }
-        \begin{semilogyaxis}[
-                xlabel=\Large{\(k\)},
-                ylabel=\Large{\(H(S)\)},
-                minor x tick num=1,
-                minor y tick num=4,
-                legend style={
-                        font=\footnotesize,
-                        legend columns=3,
-                    },
-                legend entries={\textsc{Approx},\textsc{Deter},Top-Absorb,Top-Degree,Top-PageRank},
-                % ymax=12000,
-            ]
-            \addplot+[
-                mark=pentagon*,
-                mark size = 3pt
-            ] table {compare_effects/exact/Route views/Approx.dat};
-            \addplot table {compare_effects/exact/Route views/Exact.dat};
-            \addplot table {compare_effects/exact/Route views/Top-Absorb.dat};
-            \addplot table {compare_effects/exact/Route views/Top-Degree.dat};
-            \addplot table {compare_effects/exact/Route views/Top-PageRank.dat};
-            \node [font=\huge] at (15,4) {(d)};
-        \end{semilogyaxis}
-    \end{tikzpicture}
+    \includegraphics[width=\linewidth]{compare_effects_exact2.pdf}
     \caption{GWC \(\manc{S}\) of vertex group \(S\) computed by four different algorithms \textsc{DeterMinGWC},\textsc{ApproxMinGWC},\text{Top-Absorb} and \text{Top-Degree} on four networks: Hamster friends (a), Hamster full (b), Reactome (c) and Route views (d), where \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} are denoted as \textsc{Deter} and \textsc{Approx} in the legend to save space.\label{pic:compare-effect2}}
 \end{figure}
 
-Finally, we demonstrate that the \textsc{ApproxMinGWC} algorithm is significantly more efficient than the \textsc{DeterMinGWC} algorithm, particularly when applied to large networks.
-We test both algorithms on a wider range of real networks.
-For each network, we use \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} separately to solve the GWC minimization problem, with \(k=10\) and \(\epsilon=0.2\).
-The running times of both algorithms are shown in \tabref{tab:running-time}.
+\textbf{Comparison of Efficiency between \textsc{DeterMinGWC} and \textsc{ApproxMinGWC}.} Although both \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} are very effective, below we demonstrate that \textsc{ApproxMinGWC} is significantly more efficient than \textsc{DeterMinGWC}, particularly in large networks. To this end, we compare the running time of \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} and the GWC of vertex group returned by these two algorithms on a set of real-life networks. For each network, we use \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} to select \(k=10\) vertices. We present the results in \tabref{tab:running-time}, from which we observe that the running time of  \textsc{ApproxMinGWC} is much lower than  that of \textsc{DeterMinGWC}, while the vertex sets returned by  \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} have almost the same GWC.
 
-From \tabref{tab:running-time}, we can observe that the running time of \textsc{ApproxMinGWC} is proportional to the number of edges in the network, leading to an increase in the speedup ratio of \textsc{ApproxMinGWC} as the network size grows.
-Furthermore, \tabref{tab:running-time} indicates that when processing networks marked with \(\ast\),
-\textsc{ApproxMinGWC} remains usable while \textsc{DeterMinGWC} fails due to its high time complexity.
-This result demonstrates the scalability of \textsc{ApproxMinGWC} when applied to large networks.
+The efficiency advantage of   \textsc{ApproxMinGWC} over  \textsc{DeterMinGWC} becomes more obvious for larger networks. \tabref{tab:running-time} shows the difference of running time between   \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} increases rapidly when the networks become larger. For those networks marked with \(\ast\) in \tabref{tab:running-time},  \textsc{DeterMinGWC} cannot run due to the memory and time limitations, while  \textsc{ApproxMinGWC} still works well. In particular, \textsc{ApproxMinGWC} scales to massive networks with one million nodes. For example, for the roadNet-CA network with almost two million nodes, \textsc{ApproxMinGWC} solves the MinGWC problem in about four hours. Thus, \textsc{ApproxMinGWC} is both efficient and effective, and scalable to massive networks.
+
+\iffalse
+    \textbf{Comparison of Efficiency between \textsc{DeterMinGWC} and \textsc{ApproxMinGWC}.}
+    Finally, we demonstrate that the \textsc{ApproxMinGWC} is significantly more efficient than the \textsc{DeterMinGWC} algorithm, particularly when applied to large networks.
+    We test both algorithms on a wider range of real networks.
+    For each network, we use \textsc{DeterMinGWC} and \textsc{ApproxMinGWC} separately to solve the GWC minimization problem, with \(k=10\) and \(\epsilon=0.2\).
+    The running times of both algorithms are shown in \tabref{tab:running-time}.
+
+    From \tabref{tab:running-time}, we can observe that the running time of \textsc{ApproxMinGWC} is proportional to the number of edges in the network, leading to an increase in the speedup ratio of \textsc{ApproxMinGWC} as the network size grows.
+    Furthermore, \tabref{tab:running-time} indicates that when processing networks marked with \(\ast\),
+    \textsc{ApproxMinGWC} remains usable while \textsc{DeterMinGWC} fails due to its high time complexity.
+    This result demonstrates the scalability of \textsc{ApproxMinGWC} when applied to large networks.
+\fi
+
 
 \begin{table}[htbp]
     \tabcolsep=8pt
